--- a/css/styles.css
+++ b/css/styles.css
@@ -6,7 +6,6 @@ body {
 /* Nav Bar */
 .nav {
   background-color: #171717;
-  padding: 0.1rem 1.3rem 1rem;
 }
 
 .nav-top {
@@ -72,20 +71,13 @@ h2 {
   border: 1px solid #007bff;
   border-radius: 0.2rem;
   background-color: #171717;
-  margin-left: -0.8rem;
   cursor: pointer;
   font-size: 0.9rem;
 }
 
 #search {
-  padding: 0.5rem 0.2rem;
   border: 1px solid;
   border-radius: 0.2rem;
-  margin-left: -0.4rem;
-}
-
-::placeholder {
-  padding-left: 0.5rem;
 }
 
 /* Games */
@@ -97,27 +89,25 @@ h1 {
 }
 
 ul {
-  padding-inline-start: 1.1rem;
+  padding-inline-start: 0;
 }
 
 li {
   list-style: none;
+  display: flex;
+  justify-content: center;
 }
 
 /* Card */
 .card {
   background-color: white;
   border-radius: 0.5rem;
-  width: 95%;
   margin-top: -1.5rem;
-}
-
-img {
-  border-radius: 0.5rem;
+  margin-bottom: 3.5rem;
 }
 
 .card-text {
-  padding: 0.2rem 1.4rem 0.3rem;
+  line-height: 1.6rem;
 }
 
 .card-title {
@@ -129,6 +119,8 @@ img {
 
 .game-title {
   font-weight: 600;
+  font-size: 1.6rem;
+  margin-bottom: 0.9rem;
 }
 
 .fa-heart {
