--- a/css/layout.css
+++ b/css/layout.css
@@ -27,6 +27,7 @@ img {
 
 .card {
   width: 90%;
+  box-shadow: 10px 10px 20px black;
 }
 
 .card-text {
@@ -60,6 +61,17 @@ img {
 
 .nav {
   padding: 0.1rem 1.3rem 1rem;
+}
+
+.card-small {
+  width: 90%;
+  box-shadow: 10px 10px 20px black;
+}
+
+.button-sale {
+  position: relative;
+  bottom: 190px;
+  left: 12px;
 }
 
 @media screen and (min-width: 768px) {
@@ -138,5 +150,20 @@ img {
     border-top-right-radius: 0;
     border-bottom-right-radius: 0;
     object-fit: cover;
+  }
+
+  .card-small {
+    width: 75%;
+    height: 380px;
+  }
+
+  .gallery {
+    display: flex;
+  }
+
+  .button-sale {
+    position: relative;
+    bottom: 280px;
+    left: 12px;
   }
 }
