--- a/css/styles.css
+++ b/css/styles.css
@@ -124,6 +124,30 @@ li {
 }
 
 .fa-heart {
-  transform: scale(1.7);
+  transform: scale(2);
   cursor: pointer;
+  margin-top: 0.4rem;
+}
+
+.card-small {
+  background-color: white;
+  border-radius: 0.5rem;
+  margin-top: -1.5rem;
+  margin-bottom: 3.5rem;
+}
+
+.button-sale {
+  padding: 0.5rem 0.7rem;
+  border: 1px solid #da0037;
+  color: #da0037;
+  background-color: rgba(0, 0, 0, 0);
+  border-radius: 0.2rem;
+  font-size: 1.3rem;
+}
+
+.card-title-small {
+  margin-top: -3rem;
+  margin-left: 1.4rem;
+  padding-bottom: 1.7rem;
+  max-width: 88%;
 }
