--- a/css/layout.css
+++ b/css/layout.css
@@ -153,8 +153,10 @@ img {
   }
 
   .card-small {
-    width: 95%;
+    width: 500px;
     height: 340px;
+    margin: 1rem;
+    position: relative;
   }
 
   .gallery {
@@ -165,8 +167,7 @@ img {
   }
 
   .button-sale {
-    position: relative;
-    bottom: 238px;
+    position: absolute;
     left: 0;
   }
 }
