--- a/css/styles.css
+++ b/css/styles.css
@@ -160,3 +160,64 @@ li {
 .fa-solid.fa-heart {
   color: #da0037;
 }
+
+/* Modal */
+.center-page {
+  display: flex;
+  min-height: 100vh;
+  align-items: center;
+  justify-content: center;
+}
+
+.rectangle {
+  background-color: white;
+  width: 60%;
+  height: 50%;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+}
+
+.modal-text {
+  text-align: center;
+  font-size: 2rem;
+}
+
+.modal-heading {
+  position: relative;
+}
+
+.modal-body {
+  font-size: 1.5rem;
+  padding: 0 3rem;
+}
+
+.fa-xmark {
+  transform: scale(2.5);
+  color: #da0037;
+  position: absolute;
+  right: 2rem;
+  top: 0;
+  cursor: pointer;
+}
+
+.red {
+  color: #da0037;
+}
+
+.blue {
+  color: #007bff;
+}
+
+.li-modal {
+  padding-bottom: 0.5rem;
+}
+
+.container-modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  background-color: rgb(0 0 0 / 80%);
+}
