--- a/css/layout.css
+++ b/css/layout.css
@@ -112,18 +112,31 @@ img {
 .notes-card {
   width: 90%;
   height: 630px;
+  display: flex;
 }
 
 .fa-pen-to-square {
   transform: scale(2);
-  top: 0;
-  right: -10.5rem;
+  top: 0.3rem;
+  right: -8rem;
 }
 
 .notes-img {
   object-fit: cover;
   width: 100%;
   height: 100%;
+}
+
+.notes-title {
+  font-size: 1.6rem;
+  margin-left: 0.9rem;
+  margin-top: 0.9rem;
+}
+
+.notes-body {
+  font-size: 1.2rem;
+  margin-left: 0.9rem;
+  margin-top: -1rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -271,7 +284,7 @@ img {
 
   .fa-pen-to-square {
     transform: scale(3);
-    right: 2rem;
+    right: 1rem;
     top: 1rem;
   }
 
@@ -282,5 +295,16 @@ img {
     margin-top: 2rem;
     padding-left: 1rem;
     padding-right: 1rem;
+  }
+
+  .notes-title {
+    font-size: 2.2rem;
+    margin-left: 1rem;
+    margin-top: 2rem;
+  }
+
+  .notes-body {
+    font-size: 1.4rem;
+    margin-left: 1rem;
   }
 }
