--- a/css/layout.css
+++ b/css/layout.css
@@ -139,6 +139,8 @@ img {
   margin-top: -1rem;
 }
 
+/* Edit */
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 1350px;
@@ -308,4 +310,6 @@ img {
     font-size: 1.4rem;
     margin-left: 1rem;
   }
+
+  /* Edit */
 }
