Fixed issue with info appearing for a game that had no notes data stored

--- a/css/layout.css
+++ b/css/layout.css
@@ -165,7 +165,7 @@ img {
 }
 
 .form-submit-button {
-  padding: 1rem 0;
+  padding: 1rem;
 }
 
 @media screen and (min-width: 768px) {
@@ -378,5 +378,4 @@ img {
   .form-submit-button {
     padding: 1rem 1.5rem;
   }
-}
 }
