--- a/css/styles.css
+++ b/css/styles.css
@@ -431,9 +431,55 @@ input.star-3:checked ~ label.star::before {
   font-weight: 500;
 }
 
+/* Delete Modal */
+
+.delete-modal {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  z-index: 1000;
+  background-color: rgb(0 0 0 / 80%);
+}
+
+.rectangle-small {
+  background-color: white;
+  border-radius: 0.5rem;
+}
+
+.delete-text {
+  text-align: center;
+}
+
+.delete-buttons {
+  display: flex;
+  justify-content: space-between;
+  padding: 0.5rem 1.2rem;
+}
+
+.delete-cancel {
+  padding: 0.5rem 0.7rem;
+  border: 1px solid #007bff;
+  border-radius: 0.2rem;
+  background-color: #007bff;
+  color: white;
+  cursor: pointer;
+  font-size: 0.9rem;
+}
+
+.delete-confirm {
+  padding: 0.5rem 0.7rem;
+  border: 1px solid #da0037;
+  border-radius: 0.2rem;
+  background-color: #da0037;
+  color: white;
+  cursor: pointer;
+  font-size: 0.9rem;
+}
+
 /*
 Need to fix:
 2. Codex hearts
 3. Try border for img on desktop
-4. Adding favorite games without refreshing
 */
