Added html and some css for screen when MyCodex is empty; added javascript to make it show when the codex is empty and hide when the codex data length is greater than zero

--- a/css/styles.css
+++ b/css/styles.css
@@ -478,6 +478,21 @@ input.star-3:checked ~ label.star::before {
   font-size: 0.9rem;
 }
 
+/* Empty Codex */
+.empty-card {
+  background-color: white;
+  border-radius: 0.5rem;
+  margin-top: -1rem;
+  margin-bottom: 3.5rem;
+  display: flex;
+  flex-direction: column;
+  padding: 0.5rem 2rem;
+}
+
+.empty-title {
+  text-align: center;
+}
+
 /*
 Need to fix:
 2. Codex hearts
