--- a/css/styles.css
+++ b/css/styles.css
@@ -486,11 +486,14 @@ input.star-3:checked ~ label.star::before {
   margin-bottom: 3.5rem;
   display: flex;
   flex-direction: column;
-  padding: 0.5rem 2rem;
+  padding: 0.5rem 2rem 1.2rem;
 }
 
 .empty-title {
   text-align: center;
+  font-size: 1.5rem;
+  margin-bottom: 0.5rem;
+  font-weight: bold;
 }
 
 /*
