--- a/css/layout.css
+++ b/css/layout.css
@@ -18,7 +18,8 @@
 }
 
 img {
-  width: 100%;
+  width: 351px;
+  height: 164px;
   object-fit: cover;
   border-radius: 0.5rem;
   border-bottom-left-radius: 0;
@@ -124,8 +125,9 @@ img {
 
 .notes-img {
   object-fit: cover;
-  width: 100%;
-  height: 100%;
+  width: 351px;
+  height: 237.7px;
+  margin-bottom: -5rem;
 }
 
 .notes-title {
@@ -399,23 +401,22 @@ img {
 
   .notes-img {
     object-fit: cover;
-    width: 100%;
-    height: 500px;
-    margin-top: 2rem;
-    padding-left: 1rem;
-    padding-right: 1rem;
+    width: 530px;
+    height: 530px;
+    margin-left: 1.5rem;
+    margin-right: 5rem;
   }
 
   .notes-title {
     font-size: 2.2rem;
-    margin-left: 1rem;
+    margin-left: 9rem;
     margin-top: 2rem;
     max-width: 85%;
   }
 
   .notes-body {
     font-size: 1.4rem;
-    margin-left: 1rem;
+    margin-left: 9rem;
   }
 
   .links-list li a {
@@ -502,7 +503,7 @@ img {
   }
 
   .add-game-form {
-    font-size: 1.2rem;
+    font-size: 1.3rem;
     padding: 5rem 3rem 3rem;
   }
 
