--- a/css/layout.css
+++ b/css/layout.css
@@ -248,6 +248,12 @@ img {
   margin-top: 0.5rem;
 }
 
+/* Status */
+.button-position {
+  position: absolute;
+  left: 0.7rem;
+}
+
 @media screen and (min-width: 768px) {
   .container {
     max-width: 1350px;
@@ -561,5 +567,12 @@ img {
   .new-submit {
     position: absolute;
     right: -300px;
+  }
+
+  /* Play Status */
+  .button-position {
+    position: absolute;
+    left: -0.5rem;
+    top: 0;
   }
 }
