--- a/css/layout.css
+++ b/css/layout.css
@@ -427,6 +427,8 @@ img {
     margin-left: 1.5rem;
     margin-right: 5rem;
     margin-bottom: 0;
+    border: 1px solid black;
+    border-radius: 0.5rem;
   }
 
   .notes-title {
