--- a/css/layout.css
+++ b/css/layout.css
@@ -126,7 +126,7 @@ img {
   object-fit: cover;
   width: 351px;
   height: 237.7px;
-  margin-bottom: -5rem;
+  margin-bottom: -3.5rem;
 }
 
 .notes-title {
@@ -139,10 +139,17 @@ img {
   font-size: 1.2rem;
   margin-left: 0.9rem;
   margin-top: -1rem;
+  height: 300px;
+  width: 340px;
+  overflow: auto;
 }
 
 .links-list li a {
   font-size: 1.2rem;
+}
+
+.back {
+  margin-left: 5rem;
 }
 
 /* Edit */
@@ -406,6 +413,7 @@ img {
   .notes-card {
     width: 1215px;
     height: 630px;
+    overflow: auto;
   }
 
   .fa-pen-to-square {
@@ -433,18 +441,25 @@ img {
 
   .notes-title {
     font-size: 2.2rem;
-    margin-left: 9rem;
+    margin-left: 5rem;
     margin-top: 2rem;
     max-width: 85%;
   }
 
   .notes-body {
     font-size: 1.4rem;
-    margin-left: 9rem;
+    margin-left: 5rem;
+    height: 530px;
+    width: 614px;
+    overflow: auto;
   }
 
   .links-list li a {
     font-size: 1.4rem;
+  }
+
+  .back {
+    margin-left: 12rem;
   }
 
   /* Edit */
