--- a/css/styles.css
+++ b/css/styles.css
@@ -85,7 +85,7 @@ h1 {
   color: white;
   text-shadow: rgb(0, 0, 0) 1px 0 0, rgb(0, 0, 0) 0.5px 0.8px 0, rgb(0, 0, 0) -0.416px 0.909px 0;
   text-align: center;
-  margin-top: 0.8rem;
+  margin-bottom: 2rem;
 }
 
 ul {
