--- a/css/layout.css
+++ b/css/layout.css
@@ -135,13 +135,14 @@ img {
   font-size: 1.5rem;
   margin-left: 0.9rem;
   max-width: 86%;
+  margin-top: 2rem;
 }
 
 .notes-body {
   font-size: 1.2rem;
   margin-left: 0.9rem;
   margin-top: -1rem;
-  height: 300px;
+  height: 310px;
   width: 340px;
   overflow: auto;
 }
@@ -152,9 +153,14 @@ img {
 
 .back {
   margin-left: 5rem;
+  margin-top: 0.8rem;
 }
 
 /* Edit */
+
+.edit-title {
+  margin-top: -0.2rem;
+}
 
 .edit-img {
   margin-bottom: -0.5rem;
@@ -462,6 +468,7 @@ img {
 
   .back {
     margin-left: 12rem;
+    margin-top: 4rem;
   }
 
   /* Edit */
