Changed placeholder image file to kebab-case and change css width property to min-width for notes-card

--- a/css/layout.css
+++ b/css/layout.css
@@ -673,7 +673,7 @@ img {
 
   /* Notes */
   .notes-card {
-    max-width: 1200px;
+    min-width: 1200px;
     height: 630px;
     overflow: auto;
   }
