Added first gif to README and fixed css for Play Status select tag for desktop view

--- a/css/layout.css
+++ b/css/layout.css
@@ -745,7 +745,7 @@ img {
   }
 
   .status-dropdown {
-    padding: 0.5rem 21.5rem 0.5rem 0.5rem;
+    padding: 0.5rem 0 0.5rem 0.5rem;
   }
 
   #notes {
